<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="isel.poo.li22d.g6.sokoban.Sokoban">

    <isel.poo.li22d.g6.sokoban.view.LevelView
        android:id="@+id/levelView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        app:gridLine="0"
        app:heightTiles="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movesText"
        app:widthTiles="8" />

    <View
        android:id="@+id/swipeZone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/boxesText"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="#F5C161"
        android:text="@string/remaining_boxes"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/levelView"
        app:layout_constraintStart_toEndOf="@+id/movesText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movesText"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:background="#F5C161"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/moves"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/boxesText"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toEndOf="@+id/levelNumberText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/levelNumberText"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="#F5C161"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/level"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/movesText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numOfMoves"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#CDA343"
        android:text="0"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/movesText"
        app:layout_constraintEnd_toEndOf="@+id/movesText"
        app:layout_constraintStart_toStartOf="@+id/movesText"
        app:layout_constraintTop_toTopOf="@+id/movesText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/numOfBoxes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#CDA343"
        android:text="0"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/boxesText"
        app:layout_constraintEnd_toEndOf="@+id/boxesText"
        app:layout_constraintStart_toStartOf="@+id/boxesText"
        app:layout_constraintTop_toTopOf="@+id/boxesText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/levelNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#CDA343"
        android:text="0"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/levelNumberText"
        app:layout_constraintEnd_toEndOf="@+id/levelNumberText"
        app:layout_constraintStart_toStartOf="@+id/levelNumberText"
        app:layout_constraintTop_toTopOf="@+id/levelNumberText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/messageBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#E9E9E9"
        android:paddingTop="8dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/restartLevelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelView" />

    <Button
        android:id="@+id/nextLevelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="4dp"
        android:text="@string/next_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelView" />

    <Button
        android:id="@+id/restartLevelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:text="@string/restart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelView" />

</android.support.constraint.ConstraintLayout>